Avoid commons-io, favor JDK native version